# cpp

./: README.md
Leetcode/: 1_Two_Sum.cpp  26_Remove_Duplicates_from_Sorted_Array.cpp  27_Remove_Element.cpp  34_Find_First_and_Last_Position_of_Element_in_Sorted_Array.cpp
Linux/Networking/: CMakeLists.txt
Linux/Networking/Basic/src/: client  client.cpp  server  server.cpp
Linux/Networking/NonBlocking/inc/: ClientHandler.h
Linux/Networking/NonBlocking/src/: ClientHandler.cpp  EpollManager.cpp  SocketFactory.cpp
Linux/Networking/NonBlocking_Basic/class/: CMakeLists.txt
Linux/Networking/NonBlocking_Basic/class/inc/: EchoClient.h  EchoServer.h  Epoll.h  NetworkUtils.h  Socket.h
Linux/Networking/NonBlocking_Basic/class/src/: EchoClient.cpp  EchoServer.cpp  Epoll.cpp  NetworkUtils.cpp  Socket.cpp  server.cpp
Linux/Networking/NonBlocking_Basic/no_class_impl/: client  client.cpp  client_epoll  client_epoll.cpp  server  server.cpp
Linux/Networking/NonBlocking_SOLID/: CMakeLists.txt
Linux/Networking/NonBlocking_SOLID/DesignSet/: arc_threadpool_v2.plantuml
Linux/Networking/NonBlocking_SOLID/ImplementationSet/Client/src/: ClientHandler.cpp  ClientInfo.cpp  ClientInfoFactory.cpp  ClientRegistry.cpp  ClientSocketHandler.cpp  ClientStdinHandler.cpp  EpollClient.cpp  client_main.cpp
Linux/Networking/NonBlocking_SOLID/ImplementationSet/Infrastructure/src/: DefaultTaskProcessor.cpp  Epoll.cpp  NetworkUtility.cpp  Socket.cpp  Task.cpp  Thread.cpp  ThreadPool.cpp
Linux/Networking/NonBlocking_SOLID/ImplementationSet/Server/src/: ClientHandler.cpp  EpollServer.cpp  ServerHandler.cpp  ServerStdinHandler.cpp  server_main.cpp
Linux/Networking/NonBlocking_SOLID/design/: arc.plantuml  arc_threadpool.plantuml
Linux/Networking/NonBlocking_SOLID/inc/: ClientHandler.h  ClientInfo.h  ClientInfoFactory.h  ClientRegistry.h  ClientSocketHandler.h  ClientStdinHandler.h  DefaultTaskProcessor.h  Epoll.h  EpollClient.h  EpollServer.h  IEventHandler.h  IObserver.h  ISubject.h  NetworkUtility.h  ServerHandler.h  ServerStdinHandler.h  Socket.h  Task.h  Thread.h  ThreadPool.h
Linux/Networking/NonBlocking_SOLID/src/: ClientHandler.cpp  ClientSocketHandler.cpp  ClientStdinHandler.cpp  DefaultTaskProcessor.cpp  Epoll.cpp  EpollClient.cpp  EpollServer.cpp  NetworkUtility.cpp  ServerHandler.cpp  ServerStdinHandler.cpp  Socket.cpp  Task.cpp  Thread.cpp  client_main.cpp  server_main.cpp
Linux/Networking/NonBlocking_archived/: CMakeLists.txt
Linux/Networking/NonBlocking_archived/arc/: test1.plantuml
Linux/Networking/NonBlocking_archived/inc/: ClientHandler.h  EpollManager.h  IEventHandler.h  ISocket.h  TCPSocket.h
Linux/Networking/NonBlocking_archived/src/: ClientHandler.cpp  EpollManager.cpp  SocketFactory.cpp  TCPSocket.cpp
Linux/Networking/inc/: ISocket.h  Server.h  SocketFactory.h  TCPSocket.h  client.h
Linux/Networking/src/: Server.cpp  SocketFactory.cpp  TCPSocket.cpp  client.cpp  client_main.cpp  server_main.cpp
Linux/Posix/FileSystem/: FIleSystem.cpp
Linux/Posix/Process/: basic_process.cpp  fork_and_exec.cpp  input_for_exec.cpp  zoombie_orphan.cpp
Linux/Posix/Signal/: basic_signal.cpp
Linux/Project/NonBlocking_SOLID/: CMakeLists.txt
Linux/Project/NonBlocking_SOLID/DesignSet/: arc.plantuml  arc_threadpool.plantuml  arc_threadpool_v2.plantuml
Linux/Project/NonBlocking_SOLID/ImplementationSet/Client/src/: ClientInfo.cpp  ClientSocketHandler.cpp  ClientStdinHandler.cpp  EpollClient.cpp
Linux/Project/NonBlocking_SOLID/ImplementationSet/Infrastructure/src/: DefaultTaskProcessor.cpp  Epoll.cpp  NetworkUtility.cpp  Socket.cpp  Task.cpp  ThreadPool.cpp
Linux/Project/NonBlocking_SOLID/ImplementationSet/Server/src/: ClientHandler.cpp  EpollServer.cpp  ServerHandler.cpp  ServerStdinHandler.cpp
Linux/Project/NonBlocking_SOLID/inc/: ClientHandler.h  ClientInfo.h  ClientInfoFactory.h  ClientStdinHandler.h  DefaultTaskProcessor.h  Epoll.h  EpollClient.h  EpollServer.h  NetworkUtility.h  ServerHandler.h  ServerStdinHandler.h  Task.h
Multithread/Atomic/: Atomic.cpp  AtomicVsMutex.cpp  SpinLock_Optimize.cpp
Multithread/Practice/Prac1/: prac1.cpp
Multithread/Practice/Prac2/: Prac2.cpp
Multithread/Project/inc/: client.h  load_balance.h
Multithread/Project/src/: load_balance.cpp
Multithread/Project_to_be_deleted/inc/: client.h  load_balance.h  networking.h  server.h
Multithread/Project_to_be_deleted/src/: client.cpp  load_balance.cpp  networking.cpp  server.cpp
Multithread/Queue/: CMakeLists.txt  Note
Multithread/Queue/inc/: Concurrent_Queue.h
Multithread/Queue/src/: Concurrent_Queue.cpp  main.cpp
Multithread/SharedData/: Deadlock.cpp  LazyInit.cpp  LockGuard&UniqueLock.cpp  MutexClass.cpp  ShareMutex_p2.cpp  SharedMutex.cpp
Multithread/ThreadPool/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h  main.cpp
Multithread/ThreadSync/: ConditionVariable_Pratical_Class.cpp  ConditionVariables.cpp  ConditionVariables_Pratical.cpp
Networking/: Command_For_Compile
Networking/Basic/: client.cpp  server.cpp
Networking/Class_BlockingMode/: CMakeLists.txt
Networking/Class_BlockingMode/inc/: TcpClient.h  TcpServer.h
Networking/Class_BlockingMode/src/: TcpClient.cpp  TcpServer.cpp  client_main.cpp  server_main.cpp
Project_to_be_deleted/inc/: IConnection.h  IConnectionFactory.h  Message.h  TcpConnection.h  TcpConnectionFactory.h  TcpServer.h
Project_to_be_deleted/src/: Message.cpp  TcpConnection.cpp  TcpConnectionFactory.cpp  TcpServer.cpp
TEMPLATE/: CmakeGuide.txt  TimeMeasurement_TEMPLATE.cpp  class.cpp  header.h
TEMPLATE/Design_Patterns/Observer/: CMakeLists.txt
TEMPLATE/Design_Patterns/Stratergy/: main.cpp
module00/arch/ex01/: ex01.d2
module00/src/ex00/: ex01.cpp
module00/src/ex01/: CMakeLists.txt
module03/arch/: module3.d2
module03/code/: CMakeLists.txt
module04/arch/: code2.d2
module04/code/: CMakeLists.txt
module04/code/inc/: Animal.h  Brain.h  Cat.h  Dog.h  Factory.h
module04/code/src/: Animal.cpp  Brain.cpp  Cat.cpp  Dog.cpp  Factory.cpp  main.cpp
module04/code1/: CMakeLists.txt
module04/code1/inc/: Cure.h  (+6 more)
shared_lib/: timer.hpp
(+33 files in other folders)
